[gd_scene load_steps=5 format=2]

[ext_resource path="res://mainPage.gd" type="Script" id=1]
[ext_resource path="res://questionHolder.tscn" type="PackedScene" id=2]
[ext_resource path="res://ResourceBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfxHolder.tscn" type="PackedScene" id=4]

[node name="Control" type="Node"]
script = ExtResource( 1 )
questionbankpath = NodePath("questionHolder")
sfxbankpath = NodePath("sfxHolder")

[node name="QuestionPanel" type="Panel" parent="."]
margin_left = 4.64819
margin_top = 12.0
margin_right = 360.648
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="QuestionPanel"]
margin_left = 3.96283
margin_top = 0.212746
margin_right = 363.963
margin_bottom = 93.2127
text = "questions display here"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Panel" parent="."]
margin_left = -2.26495
margin_top = 145.914
margin_right = 361.735
margin_bottom = 281.914
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="Message"]
margin_left = 120.0
margin_top = 96.0
margin_right = 251.0
margin_bottom = 122.0
text = "info messages"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personSprite" type="Sprite" parent="Message"]
position = Vector2( 173, -2 )
scale = Vector2( 0.5, 0.5 )

[node name="ResourcesPanel" type="Panel" parent="."]
margin_left = 2.18924
margin_top = 261.736
margin_right = 362.189
margin_bottom = 550.736
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthResourceBar" parent="ResourcesPanel" instance=ExtResource( 3 )]
margin_left = 1.10803
margin_top = 38.9464
margin_right = 101.108
margin_bottom = 238.947

[node name="Label" parent="ResourcesPanel/HealthResourceBar" index="1"]
text = "health"

[node name="MoneyResourceBar" parent="ResourcesPanel" instance=ExtResource( 3 )]
margin_left = 134.729
margin_top = 36.7303
margin_right = 234.729
margin_bottom = 236.73

[node name="Label" parent="ResourcesPanel/MoneyResourceBar" index="1"]
text = "money"

[node name="SanityResourceBar" parent="ResourcesPanel" instance=ExtResource( 3 )]
margin_left = 255.969
margin_top = 38.9464
margin_right = 355.969
margin_bottom = 238.947

[node name="Label" parent="ResourcesPanel/SanityResourceBar" index="1"]
text = "sanity"

[node name="OptionsPanel" type="Panel" parent="."]
margin_top = 533.0
margin_right = 360.0
margin_bottom = 740.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yesbutton" type="Button" parent="OptionsPanel"]
margin_left = 185.769
margin_top = 53.1149
margin_right = 346.769
margin_bottom = 159.115
text = "yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nobutton" type="Button" parent="OptionsPanel"]
margin_left = 16.0
margin_top = 53.1149
margin_right = 175.0
margin_bottom = 160.115
text = "no"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="questionHolder" parent="." instance=ExtResource( 2 )]

[node name="info" type="Panel" parent="."]
visible = false
modulate = Color( 0.964706, 0.941176, 0.941176, 1 )
margin_left = 11.0975
margin_top = 314.172
margin_right = 352.098
margin_bottom = 731.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="info"]
modulate = Color( 0.960784, 0.898039, 0.898039, 1 )
self_modulate = Color( 0.988235, 0.972549, 0.972549, 1 )
margin_left = 41.5446
margin_top = 31.8219
margin_right = 284.545
margin_bottom = 179.822
text = "make sure you and your family survive the quarantine!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Button" parent="info"]
margin_left = 4.0
margin_top = 289.228
margin_right = 336.0
margin_bottom = 398.228
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfxHolder" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="OptionsPanel/yesbutton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="OptionsPanel/nobutton" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="info/ok" to="." method="_on_ok_pressed"]

[editable path="ResourcesPanel/HealthResourceBar"]

[editable path="ResourcesPanel/MoneyResourceBar"]

[editable path="ResourcesPanel/SanityResourceBar"]
